Fix image size in posts on mobile

--- a/website/static/css/jdr.css
+++ b/website/static/css/jdr.css
@@ -181,3 +181,7 @@ pre {
 .error {
     color: #cc4747 !important;
 }
+
+img {
+    max-width: 100%;
+}
